# aidesignlab_website_final_really

./: .cursorrules  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  ACE_CONTACTS.md  AGENTS.md  AZURE_AD_SETUP.md  CHANGELOG.md  DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  ENGINEERING_STANDARDS.md  FASTAPI_SERVER_GUIDE.md  FASTAPI_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTALL_TIPTAP.md  MIGRATION.md  OPERATOR_CONTACTS.md  PLAN.md  PROJECT_STRUCTURE.md  QUICK_START.md  RBAC_GUIDE.md  README.md  SETUP.md  fix-prisma.bat  middleware.ts  next.config.js  package.json  start-dev.bat  tailwind.config.ts  vercel.json
.claude/: settings.local.json
.cursor/rules/: core-standards.mdc  python-backend.mdc  typescript-frontend.mdc
.github/workflows/: deploy.yml
.next/: app-build-manifest.json  prerender-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  middleware-manifest.json  middleware.js  (+2 more)
app/: globals.css  layout.tsx  page.tsx
apps/api/: .gitignore  README.md  pyproject.toml
apps/api/app/: __init__.py  dependencies.py  main.py  settings.py
apps/api/app/models/: __init__.py
apps/api/app/routers/: __init__.py  admin.py  data.py
apps/api/app/schemas/: __init__.py  allowlist.py  common.py  data.py
apps/api/app/services/: allowlist.py  data.py
components/: AuroraBackground.tsx  CookieBanner.tsx  GalleryCard.tsx  GalleryModal.tsx  Header.tsx  HelpButton.tsx  HelpModal.tsx  InfiniteGrid.tsx  LoginButton.tsx  NoticeBanner.tsx  Typewriter.tsx  TypewriterSimple.tsx  WritePost.tsx
config/: landing.ts  requirements.ts
data/: mockData.ts  mock_data.json
docs/: AZURE_SQL_SETUP.md  DATA_STORAGE_REVIEW.md  MIGRATION_NEXT_STEPS.md  PRISMA_SETUP.md  TROUBLESHOOTING.md
lib/: auth.ts  constants.ts
scripts/: convert-mockdata-to-json.js
types/: award.ts  index.ts
(+198 files in other folders)
